samples/_failures_safe/1761724923_06b858_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d116be50.c: In function ‘main’:
./samples/SAFE/__tmp_d116be50.c:136:13: error: expected declaration or statement at end of input
  136 |             fprintf(stderr, "Invalid edge input\n");
      |             ^~~~~~~
./samples/SAFE/__tmp_d116be50.c:136:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d116be50.c:136:13: error: expected declaration or statement at end of input
